--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -246,7 +246,7 @@ The trigger configuration which imposes the smallest bias and thus accepts the m
 \caption{Pseudorapidity acceptance of the SPD, the SDD, the SSD and the TPC shown as function of the position of the primary vertex along the $z$-axis. The fiducial acceptance represents the region where most tracks can be reconstructed (cite mknichel).}
 \label{fiducialAcc}
 \end{figure}
-In an offline stage of the event selection, collision candidates that satisfy the trigger condition undergo a selection process in order to reduce the contamination with poor quality events. A part of this contamination corresponds to background events, a particle flux caused by the interaction between the beams and the matter in the machine. The beam background is discriminated mainly by means of the signal arrival time of the events in the V0 modules. The arrival time of background events is shorter than the one of a collision produced in the nominal interaction point. This difference is exploited to exclude background events from the data sample. Another source of contamination are the so-called pile-up events, which are multiple collisions occurring within the same bunch crossing. In addition, events produced in a bunch crossing different from the one that triggered the data recording are also considered pile-up. An event is identified as pile-up and removed from the data sample when multiple primary vertices are reconstructed using the information from the SPD in a single triggered event.\\
+In an offline stage of the event selection, collision candidates that satisfy the trigger condition undergo a selection process in order to reduce the contamination with poor quality events. A part of this contamination corresponds to background events, which are caused by the interaction between the LHC beams and the detector material. The beam background is discriminated mainly by means of the signal arrival time of the events in the V0 modules. The arrival time of background events is shorter than the one of a collision produced in the nominal interaction point. This difference is exploited to exclude background events from the data sample. Another source of contamination are the so-called pile-up events, which are multiple collisions occurring within the same bunch crossing. In addition, events produced in a bunch crossing different from the one that triggered the data recording are also considered pile-up. An event is identified as pile-up and removed from the data sample when multiple primary vertices are reconstructed using the information from the SPD in a single triggered event.\\
 The pseudorapidity acceptance of the ALICE tracking detectors depends on the position of the primary vertex $\text{V}_z$ along the beam axis $z$ as illustrated in Figure \ref{fiducialAcc} for the ITS subdetectors and the TPC. To ensure a symmetric pseudorapidity  coverage of $|\eta| < 0.8$, the vertex position was restricted to $|V_z| < 10$ cm.$|V_z| < 10$ 
 %https://arxiv.org/pdf/1402.4476.pdf
 %https://arxiv.org/pdf/1110.5530.pdf
@@ -349,11 +349,11 @@ In the following sections, the corrections applied to the \pt spectra and the an
 \caption{Trigger and event vertex reconstruction efficiencies for pp collisions at $\sqrt{s} = 5.02$ TeV recorded with ALICE in 2017.}
 \label{tab:effs}
 \end{table} 
-The \pt distributions are normalized by the total number of inelastic events $N_\text{INEL}$, as in Equation (cite formula). This value is approximately the number of events $N_\text{ev}^\text{rec}$ that passed the selection criteria. Nevertheless, some inelastic events could not be measured because a lack of triggering or vertex reconstruction. These two phenomena are corrected by means of the so-called trigger efficiency $\epsilon_\text{Trig}$ and the vertex reconstruction $\epsilon_\text{Vz}$ efficiency:
+The number events of $N_\text{ev}^\text{rec}$ that passed the selection criteria and which is used for the normalization of the \pt distributions does not include some inelastic events that were not triggered or reconstructed. These two phenomena are corrected by means of the so-called trigger efficiency $\epsilon_\text{Trig}$ and the vertex reconstruction $\epsilon_\text{Vz}$ efficiency:
 \begin{equation}
 N_\text{ev}^\text{rec} = N_\text{INEL}\cdot \epsilon_\text{Trig} \cdot \epsilon_\text{Vz}
 \end{equation}
-In heavy-ion collisions, both trigger and vertex reconstruction efficiency have been observed to be unity in the studied centrality interval 0-80\% (cite mknichel/Pb-Pb papers). However, the bias is particularly notable in pp collisions. The determination of the respective efficiencies in pp collisions, described below, is therefore required.
+where $N_\text{INEL}$ represents the true number of inelastic events. In heavy-ion collisions, both trigger and vertex reconstruction efficiency have been observed to be unity in the studied centrality interval 0-80\% (cite mknichel/Pb-Pb papers). However, the bias is particularly notable in pp collisions. The determination of the respective efficiencies in pp collisions, described below, is therefore required.
 \subsubsection{Trigger efficiency}
 %cite ALICE 2017 luminosity determination for pp collisions at
 %cite vdM:http://cds.cern.ch/record/296752/files/196800064.pdf
@@ -427,7 +427,7 @@ The overall efficiency also depends on the type of particle measured. This requi
 \caption{Scaling factors obtained from the parametrization of the ratios in Figure \ref{trckEffPbPb1}.}
 \label{tab:ScalingFactors}
 \end{table} 
-\hspace{-0.3cm} In Figure \ref{trckEffpp}, the overall efficiency as function of \pt is shown for pp collisions. Here, the efficiency amounts to a value between 54\% and 75\% over the entire \pt range. At low $p_\text{T}$, below 0.4 GeV/$c$, there is a rapid growth of the efficiency which can be explained by the increasing radii of the particle trajectories making it more likely for the track to fulfil the strict selection criteria. After reaching the maximum, the curve drops quickly and hits its minimum around 1 GeV/$c$. This slump is caused mainly by the track length cut listed in Table \ref{tab:Cuts}. The overall efficiency is more affected by this phenomenon within this particular $p_\text{T}$-range given that the corresponding tracks tend to cross the TPC boundaries reducing hence their probability to be selected. Following this, the distribution increases asymptotically due to the acceptance restrictions of the detector up to reaching a plateau (cite paper). The overall efficiency is assumed to be constant for $p_\text{T} \geq 40$ GeV/$c$ in order to reduce statistical fluctuations. \\
+\hspace{-0.3cm} In Figure \ref{trckEffpp}, the overall efficiency as function of \pt is shown for pp collisions. Here, the efficiency amounts to a value between 54\% and 75\% over the entire \pt range. At low $p_\text{T}$, below 0.4 GeV/$c$, there is a rapid growth of the efficiency which can be explained by the increasing radii of the particle trajectories making it more likely for the track to fulfil the strict selection criteria. After reaching the maximum, the curve drops quickly and hits its minimum around 1 GeV/$c$. This slump is caused mainly by the track length cut listed in Table \ref{tab:Cuts} which aims for a selection of tracks that fulfil a minimal geometric length within the fiducial detector volume. The tracks in the $p_\text{T}$-range of the slump tend to cross the TPC boundaries so that they are less likely to be selected. Following this, the distribution increases asymptotically due to the acceptance restrictions of the detector up to reaching a plateau (cite paper). The overall efficiency is assumed to be constant for $p_\text{T} \geq 40$ GeV/$c$ in order to reduce statistical fluctuations. \\
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=12cm]{Plots/trckEffPbPb2.pdf}  
@@ -480,7 +480,7 @@ where $\rho_\text{MC}$ represents the fraction of secondaries in the MC sample.
 \label{scalefactors} 
 \end{figure}
 In Figure \ref{scalefactors}, the resulting scaling factors in pp collisions are shown as an example. To be able to scale the secondary contamination in all \pt intervals, the missing scaling factors are constructed by a linear interpolation as shown in this same figure. For \pt $> 1.5$ GeV/$c$, the scale factor of the last considered \pt interval is used since the amount of secondaries barely varies beyond this range. The corrected contamination by secondaries is shown in Figure \ref{SecCont} with full markers.\\
-Moreover, the intervals of the DCA$_{\text{xy}}$ distributions as well as the \pt intervals for which the fit is performed are adjusted by optimizing the deviation of the data points from the fit as function of the DCA as shown in Figure \ref{4plots}. Here, it can be seen that the template prediction is in good agreement with the the data points in the tails, the region of interest in this approach.\\
+Moreover, the intervals of the DCA$_{\text{xy}}$ distributions as well as the \pt intervals for which the fit is performed are adjusted by optimizing the deviation of the data points from the fit as function of the DCA$_{\text{xy}}$ as shown in Figure \ref{Pulls}. Here, it can be seen that the template prediction is in good agreement with the the data points in the tails, the region of interest in this approach.\\
 To ensure the goodness of the fit, a Pearson's chi-squared test was performed with a significance level of $0.05$ (cite Karl Pearson paper). In this approach, the test statistic ratio $\chi^2$ is computed as follows:
 \begin{equation}
 \chi^2 = \sum_{\text{i}} \dfrac{(\text{DCA}_\text{data,i} - \text{DCA}_\text{fit,i})^2}{\text{DCA}_\text{fit,i}}
@@ -578,13 +578,15 @@ In the case of Pb-Pb collisions, the physical quantity used for the determinatio
 \dfrac{\text{d}^2 N^\text{Pb-Pb}_\text{ch}}{\text{d}\eta \text{d}p_\text{T}} = \dfrac{1}{N_\text{INEL}} \cdot \dfrac{\text{d}^2 N^\text{Pb-Pb}_\text{corr}}{\text{d}\eta \text{d}p_\text{T}}
 \end{equation}
 \section{Systematic uncertainties}
-The \pt distributions as well as the nuclear modification factors are affected by uncertainties product of inaccuracies in the measurement instruments or assumptions made in the analysis approaches. These are the so-called systematic uncertainties. In this thesis, the source of systematics considered arises from the track selection criteria. However, other sources of systematic uncertainties have been identified in previous measurements of nuclear modification factors (cite paper). In this chapter, these sources will be described and its impact on the \pt distributions approximated.
+MC simulations aim to reproduce accurately the detector performance so that their information can be used to correct the data. However, the simulations are subject to uncertainties which affect the MC based corrections and therefore the \pt distributions as well as the nuclear modification factors. These are the so-called systematic uncertainties. In this thesis, the source of systematics considered arises from the track selection criteria. However, other sources of systematic uncertainties have been identified in previous measurements of nuclear modification factors (cite paper). In this chapter, these other sources will be described and its impact on the \pt distributions presented.
 \subsection{Track selection} 
-As in Section \ref{TrackSelection} explained, the track selection has been develop in the course of the years and validated through cross-checks. Nevertheless, the choice of the selection criteria, yet justified via these studies, is subjected to a systematic uncertainty. Each criterion contributes independently of the rest to the systematic uncertainties of the \pt spectra and as a consequence of the nuclear modification factors. For this reason, the total value of $\sigma^\text{sys}_\text{tot}$ is calculated via the root sum squared method:
+\label{systracksel}
+As explained in Section \ref{TrackSelection}, the track selection has been developed in the course of years and validated through cross-checks. Nevertheless, the choice of the selection criteria, yet justified via these studies, is subjected to a systematic uncertainty. For the calculation of the contributions to the systematic uncertainties, it is assumed that each criterion contributes independently of the rest. For this reason, the total value of $\sigma^\text{sys}_\text{tot}$ is calculated via the root sum squared method:
 \begin{equation}
-\sigma^\text{sys}_\text{sel,tot} = \sqrt{\sum_{\text{i}}\sigma^\text{sys}_\text{sel,i}}
+\sigma^\text{sys}_\text{sel,tot} = \sqrt{\left(\sum_{\text{i}}\sigma^\text{sys}_\text{sel,i} \right)^2}
 \end{equation} 
-To determine the individual contributions, each nominal track requirement listed in Table \ref{tab:Cuts} is varied twice within a range in which it is believed to be physically meaningful. The variations, listed in Table \ref{tab:curVar}, correspond to the maximum and the minimum of this range. Next, the fully corrected \pt distributions are recalculated implementing one variation at a time. These \pt distributions are compared to the nominal one by means of a ratio, obtaining as result two ratios for each track cut, with the exception of the required hit in the SPD. Finally, the two ratios are evaluated in each \pt interval and the largest deviation from the nominal \pt spectrum between the both of them is assumed as systematic uncertainty in the corresponding \pt interval. The resulting systematic uncertainties corresponding to each track cut can be then presented as function of the transverse momentum. The total systematic uncertainty is calculated subsequently applying a root sum squared in each \pt interval among the individual systematic uncertainties. In Figure \ref{SysUncSpec}, the individual and the combined contributions to the systematic uncertainty are given for pp as well as for central, semi-central and peripheral Pb-Pb collisions. This same approach is also applied to determine the systematic uncertainties that affect the nuclear modification factors as seen in Figure \ref{SysUncRaa} for these same centrality classes.
+To determine the individual contributions, each nominal track requirement listed in Table \ref{tab:Cuts} is varied twice within a range in which it is believed to be physically meaningful. The variations, listed in Table \ref{tab:curVar}, correspond to the maximum and the minimum of this range. Next, the fully corrected \pt distributions are recalculated with each variation. These \pt distributions are compared to the nominal one by means of a ratio, obtaining as result two ratios for each track cut, with the exception of the required hit in the SPD. Finally, the two ratios are evaluated in each \pt interval and the largest deviation from the nominal \pt spectrum between the both of them is assumed as systematic uncertainty in the corresponding \pt interval. The resulting systematic uncertainties corresponding to each track cut can be then presented as function of the transverse momentum. The total systematic uncertainty is calculated subsequently applying a root sum squared in each \pt interval among the individual systematic uncertainties. In Figure \ref{SysUncSpec}, the individual and the combined contributions to the systematic uncertainty are given for pp as well as for central, semi-central and peripheral Pb-Pb collisions. \\
+In the previous ALICE measurement of nuclear modification factors, the corresponding systematic uncertainties were calculated by propagating the systematic uncertainties on the \pt distributions in pp and Pb-Pb collisions. With the aim of obtaining a more accurate estimation of the systematic uncertainties on $R_\text{Pb-Pb}$, the same approach explained above is used. In Figure \ref{SysUncRaa}, the resulting contributions are shown for pp as well as for central, semi-central and peripheral Pb-Pb collisions.
 \begin{table}[tb!]
 \renewcommand{\arraystretch}{1.5}
 %\rowcolor{bodyBlue}
@@ -639,9 +641,9 @@ $\chi^2$ TPC constrained track vs. global track  & $\leq 36$ & $\leq 25$ & $\leq
 \label{SysUncRaa}
 \end{figure}
 \subsection{Other sources} 
-In previous measurements of inclusive charged particles (cite paper), other sources of systematic uncertainties on the \pt distributions besides the track selection have been identified. In this section, an overview about the corresponding sources as well as an approximation of the contributions will be given. In Table \ref{tab:othersources}, the relative systematic uncertainties for \pt spectra in pp and Pb-Pb collisions are shown. 
+In previous measurements of inclusive charged particles (cite paper), other sources of systematic uncertainties on the \pt distributions besides the track selection have been identified. In this section, an overview about the corresponding sources as well as an approximation of their contributions to the total systematic uncertainties acquired from the cited publication will be given. In Table \ref{tab:othersources}, the relative systematic uncertainties for \pt spectra in pp and Pb-Pb collisions are shown. 
 \begin{enumerate} 
-\item The tracking efficiency is approximated using the MC information. Nevertheless, the simulations are not able  to reproduce fully the detector effects. The related systematic uncertainty is calculated by means of a quantity that compares global tracks with tracks reconstructed only with the TPC: the matching efficiency. The maximum deviation from unity of the ratio of the matching efficiency in MC to the one in data is used as uncertainty.
+\item The tracking efficiency is approximated using the MC information. Nevertheless, the simulations are not able  to reproduce fully the detector performance. The related systematic uncertainty is calculated by means of a quantity that compares global tracks with tracks reconstructed only with the TPC: the matching efficiency. The maximum deviation from unity of the ratio of the matching efficiency in MC to the one in data is used as uncertainty.
 \begin{table}[tb!]
 \renewcommand{\arraystretch}{1.5}
 %\rowcolor{bodyBlue}
@@ -662,21 +664,23 @@ Anchor point & - & $0.06$-$3.5\%$ \\
 \caption{Contributions to the total systematic uncertainty on \pt distributions in pp and Pb-Pb collisions calculated in the previous ALICE measurements (cite paper).}
 \label{tab:othersources}
 \end{table}
-\item There are three distinct contributions to the systematic uncertainty of the particle composition correction (cite Patrick). For their calculation, variations in the approach are performed and the maximal deviation between the nominal correction and the one resulting from each variation is assigned as systematic uncertainty. The total systematic uncertainty is determined by summing in quadrature the individual contributions which are summarized in the following:
+\item There are three distinct contributions to the systematic uncertainty of the particle composition correction (cite Patrick). For their calculation, variations in specific parameters of the approach are performed and the maximal deviation between the nominal correction and the one resulting from each variation is assigned as systematic uncertainty. The total systematic uncertainty is determined by summing in quadrature the individual contributions:
+\iffalse
 \begin{itemize}
 \item The first contribution is related to measured production rates of identified charged particles. The measured particle spectrum of each particle type are varied between the extreme values of the range of its systematic uncertainty.
 \item Another contribution arises from the extrapolation of the \pt spectra at low \pt used in the correction. The contribution is determined by recalculating the correction using alternative parametrizations as well as different fit ranges.
 \item The last contribution originates from the fact that the relative particle abundances are assumed to be flat for $p_\text{T} > 10$ GeV/$c$. For the calculation of the systematic uncertainty, this range is varied and the resulting corrections are compared to the nominal one.  
 \end{itemize} 
-\item The contribution to the systematic uncertainties of the scaling of the secondary contamination is determined by comparing the correction factors that result from a two and a three template fit. The deviation between both results is assigned as uncertainty.
+\fi
+\item The contribution to the systematic uncertainties of the data-driven scaling of the secondary contamination is determined by comparing the correction factors that result from a two and a three template fit. The deviation between both results is assigned as uncertainty.
 \item In the published results, the vertex and trigger efficiency is combined and the half of this value was assigned as systematic uncertainty.
-\item MC simulations attempt to approximate the impact of the detector material on the data.  is related to a systematic uncertainty. Through an analysis of photon conversions, the related systematic uncertainty is found varying the material budged in the simulation by $\pm 4.5\%$.
-\item In Pb-Pb collisions, the anchor point defines the scale of the centrality. Its determination is subject to an uncertainty of $0.5\%$. After adjusting the centrality boundaries with this uncertainty, \pt spectra are recalculated and the maximum deviation from the nominal one is assigned as the corresponding contribution.
+\item The simulation of the impact of the detector material on the data by the MC productions is subject to systematic uncertainties. Through an analysis of photon conversions, the related systematic uncertainty is found varying the material budged in the simulation by $\pm 4.5\%$.
+\item For the centrality determination in Pb-Pb collisions, an anchor point is defined as the reference limit of the centrality below which the measurement is biased. This is used  the scale of the centrality. Its determination is subject to an uncertainty of $0.5\%$. After adjusting the centrality boundaries with this uncertainty, \pt spectra are recalculated and the maximum deviation from the nominal one is assigned as the corresponding contribution.
 \end{enumerate} 
 
 \section{Results}
 \subsection{Differential cross section in pp collisions}
-After implementing the corrections as described in Section \ref{secCorr}, the differential cross section (see Equation \ref{EqdiffCross}) for inclusive charged particles in inelastic pp collisions at $\sqrt{s}=5.02$ TeV measured by ALICE is presented in Figure \ref{diffCross}. The statistical uncertainties are shown in error bars, while the boxes represent the systematic uncertainties. In the figure, the previous ALICE measurement (cite note) is also shown. It can be observed that the presented work reaches a transverse momentum of $p_\text{T} = 100$ GeV/$c$ which improves the previous one of $p_\text{T} = 50$ GeV/$c$. This development is explained by the higher statistics that the used data sets offer in comparison to the ones of 2015. Another feature of this result is the improved granularity of the \pt intervals which are finer in the mid and high \pt region than in the previous results. These two aspects facilitate a better precision of the nuclear modification factors as it will be seen in the following sections. 
+After implementing the corrections as described in Section \ref{secCorr}, the differential cross section (see Equation \ref{EqdiffCross}) for inclusive charged particles in inelastic pp collisions at $\sqrt{s}=5.02$ TeV measured by ALICE is presented in Figure \ref{diffCross}. The statistical uncertainties are shown in error bars, while the boxes represent the systematic uncertainties determined in Section \ref{systracksel}. In the figure, the previous ALICE measurement (cite note) is also shown. It can be observed that the presented work reaches a transverse momentum of $p_\text{T} = 100$ GeV/$c$ which extends the \pt reach of the previous measurement of $p_\text{T} = 50$ GeV/$c$. This development is explained by the higher statistics that the used data sets offer in comparison to the ones of 2015. Another feature of this result is the improved granularity of the \pt intervals which are finer in the mid and high \pt region than in the previous results. These two aspects facilitate a better precision of the nuclear modification factors as it will be seen in the following sections. 
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=12cm]{Plots/diffCrosspp.pdf}  
@@ -684,7 +688,7 @@ After implementing the corrections as described in Section \ref{secCorr}, the di
 \label{diffCross}
 \end{figure}
 \subsection{Invariant yield in Pb-Pb collisions}
-The invariant yields (see Equation \ref{Eqinyield}) for inclusive charged particles for nine centrality classes in inelastic Pb-Pb collisions measured by ALICE at $\sqrt{s}_\text{NN}=5.02$ TeV are given in Figure \ref{invYield}. Statistical and systematic uncertainties are represented with error bars and boxes, respectively. In the same figure, the results of the previous ALICE measurement are also shown. The shape of the \pt distributions present a dependency on the centrality. In central collisions, the invariant yields present a more pronounced slope for \pt > 3 GeV/$c$ than the one in peripheral collisions. With decreasing centrality the shape becomes more similar to the one in pp. Once determined the fully \pt distributions in pp and in Pb-Pb collisions, the calculation of nuclear modification factors is performed.
+The invariant yields (see Equation \ref{Eqinyield}) for inclusive charged particles in nine centrality classes in inelastic Pb-Pb collisions measured by ALICE at $\sqrt{s}_\text{NN}=5.02$ TeV are given in Figure \ref{invYield}. Statistical and systematic uncertainties are represented with error bars and boxes, respectively. In the same figure, the results of the previous ALICE measurement are also shown. The shape of the \pt distributions present a dependency on the centrality. In central collisions, the invariant yields present a more pronounced slope for \pt > 3 GeV/$c$ than the one in peripheral collisions. With decreasing centrality the shape becomes more similar to the one in pp. Once determined the fully \pt distributions in pp and in Pb-Pb collisions, the calculation of nuclear modification factors is performed.
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=12cm]{Plots/invYieldPbPb.pdf}  
@@ -692,11 +696,11 @@ The invariant yields (see Equation \ref{Eqinyield}) for inclusive charged partic
 \label{invYield}
 \end{figure}
 \subsection{Nuclear modification factors}
-As introduced in Section (cite section), the energy density produced in ultra-relativistic heavy-ion collisions  allows the creation of a quark-gluon plasma, a deconfined state of strongly interacting matter. In this medium, high \pt partons experience an energy loss which leads to a suppression of the particle production as it was suggested by J.D. Bjorken. The study of this suppression can therefore provide insight on the properties of the quark-gluon plasma. In the presented work, the suppression is analyzed through a comparison of the charged-particle production in heavy-ion collisions with a reference measurement in pp collisions, where no quark-gluon plasma is created. The nuclear modification factor $R_\text{PbPb} $ offers the possibility to quantify the suppression via:
+As introduced in Section (cite section), the energy density produced in ultra-relativistic heavy-ion collisions  allows the creation of a quark-gluon plasma, a deconfined state of strongly interacting matter. In this medium, high \pt partons experience an energy loss which leads to a suppression of the particle production as it was suggested by J.D. Bjorken. The study of this suppression can therefore provide insight on the properties of the quark-gluon plasma. In the presented work, the suppression is analyzed through a comparison of the charged-particle production in heavy-ion collisions with a reference measurement in pp collisions, where no quark-gluon plasma is expected to be created. The nuclear modification factor $R_\text{PbPb} $ offers the possibility to quantify the suppression via:
 \begin{equation}
-R_\text{PbPb} = \dfrac{1}{T_\text{AA}} \dfrac{\text{d}^2 N^\text{Pb-Pb}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}{\text{d}^2 \sigma^\text{pp}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}
+R_\text{PbPb} = \dfrac{1}{\langle T_\text{AA}\rangle} \dfrac{\text{d}^2 N^\text{Pb-Pb}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}{\text{d}^2 \sigma^\text{pp}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}
 \end{equation}
-where the numerator represents the invariant yield in Pb-Pb collisions and the denominator the differential cross section in pp collisions. Note that the differential cross section is scaled with the nuclear overlap function $\langle T_\text{PbPb} \rangle$. This quantity is calculated through a Glaber Monte Carlo simulation (cite ana note) and the values used in this work can be found in Table \ref{tab:taa}.\\
+where the numerator represents the invariant yield in Pb-Pb collisions and the denominator the differential cross section in pp collisions. Note that the differential cross section is scaled with the nuclear overlap function $\langle T_\text{PbPb} \rangle$. This quantity is calculated through a Glauber Monte Carlo simulation (cite ana note) and the values used in this work can be found in Table \ref{tab:taa}.\\
 \begin{table}[tb!]
 \renewcommand{\arraystretch}{1.5}
 %\rowcolor{bodyBlue}
@@ -721,14 +725,14 @@ where the numerator represents the invariant yield in Pb-Pb collisions and the d
 \label{tab:taa}
 \end{table}
 In Figure \ref{Raa}, the nuclear modification factors for inclusive charged particles in inelastic Pb-Pb collisions measured by ALICE at $\sqrt{s}_\text{NN}=5.02$ TeV are presented in nine centrality classes. Here, the statistical uncertainties are denoted as error bars and the systematic uncertainties as boxes. As expected, the nuclear modification factors are characterized by a strong dependency on the centrality. In the same figure, the previous measurements of nuclear modification factors in ALICE are also shown with open markers. The results of this work are in good agreement with the ones of the previous measurement. There is an improvement of the \pt reach as well as of the granularity of the intervals for \pt > 3.2 GeV/$c$. This is result of the increased statistics in pp collisions which allows a better precision in the corresponding \pt distribution as described before.\\
-A significant suppression of the charged-particle production is observed in all centrality collisions. In the low \pt region, the suppression decreases slightly until the $R_\text{PbPb}$ reach values of around 0.45 in the most central collisions and around 0.8 in peripheral collisions. Following this peak, the maximal suppression occurs at around \pt = 6.5 GeV/$c$ for the first four centrality classes, before the nuclear modification factors rise gradually and reach values between around 0.5 and 0.6. Towards peripheral collisions, the fall after the peak is less pronounced, the factors grow more steeply and the values of $R_\text{PbPb}$ approach unity at high transverse momenta. 
+A significant suppression of the charged-particle production is observed in most \pt intervals of the nine centrality classes. In the low \pt region, the suppression decreases slightly until the $R_\text{PbPb}$ reach values of around 0.45 in the most central collisions and around 0.8 in peripheral collisions. Following this peak, the maximal suppression occurs at around \pt = 6.5 GeV/$c$ for the first four centrality classes, before the nuclear modification factors rise gradually and reach values between around 0.5 and 0.6. Towards peripheral collisions, the fall after the peak is less pronounced, the factors grow more steeply and the values of $R_\text{PbPb}$ approach unity at high transverse momenta. 
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=12cm]{Plots/Raa.pdf}  
 \caption{Nuclear modification factors for nine centrality classes in Pb-Pb collisions at $\sqrt{s}=5.02$ TeV measured by ALICE.}
 \label{Raa}
 \end{figure}
-For a better understanding of the suppression in heavy-ion collisions, several theoretical models make predictions about the behavior of physical observables in the strong interacting medium at LHC energies. It is worth comparing the obtained results with the theoretical models in order to proof their validity in more detail. To this end, the nuclear modification factor for the most central collisions obtained in this work is compared to four different theoretical formalisms. The calculations of these models make use of the pQCD factorization of the cross section for hadron production. This leads to a description of the suppression in the high \pt region of the $R_\text{PbPb}$. The formalisms of each of the approaches are presented briefly in the following (cite paper):
+For a better understanding of the suppression in heavy-ion collisions, several theoretical models make predictions about the behavior of physical observables in the strong interacting medium at LHC energies. It is worth comparing the obtained results with the theoretical models in order to proof their validity in more detail. To this end, the nuclear modification factor for the most central collisions obtained in this work is compared to four different theoretical formalisms. The calculations of these models make use of the pQCD factorization of the cross section for hadron production. All of the following models implement different approaches which lead to parton energy loss. Therefore, a comparison of these measurements with the models will help to improve the fundamental understanding of parton energy loss mechanisms. The formalisms of each of the approaches are presented briefly in the following (cite paper):
 \begin{figure}[tb!]
 \centering
 \includegraphics[width=10	cm]{Plots/Raatheo.png}  
@@ -742,7 +746,7 @@ For a better understanding of the suppression in heavy-ion collisions, several t
 \item $\mathbf{SCET}_\mathbf{G}$-\textbf{Vitev:} This description (cite here) of inclusive particle production and the suppression consists in the soft-collinear effective theory (SCET) extended with the coupling of Glauber gluons exchanges to the medium. In the calculations, cold nuclear matter effects and parton-to-hadron fragmentation functions are taken into account.
 \item \textbf{Djordjevic:} The last approach predicts the energy loss with pQCD calculations in a dynamical QCD medium of finite spatial extent. In the framework of the $\text{SCET}_\text{G}$ model, the prediction discusses the radiative and the collisional energy loss of the partons integrating cold nuclear effects.
 \end{enumerate}
-In Figure \ref{raatheo}, the measured nuclear modification factor for a centrality of 0-5\% is compared to the four theoretical models as well as to the previous ALICE measurement. The upper and lower boundaries of the models represent the uncertainty which is calculated through variation of different parameters of the approach. The measured nuclear modification factors are overall consistent with the theoretical models. Nevertheless, the Bianchi model overestimates the suppression in the \pt range 10 < \pt < 18 GeV/$c$.
+In Figure \ref{raatheo}, the measured nuclear modification factor for a centrality of 0-5\% is compared to the four theoretical models as well as to the previous ALICE measurement. The upper and lower boundaries of the models represent the uncertainty which is calculated through variation of different parameters of the corresponding approaches. The measured nuclear modification factors are overall consistent with the theoretical models. Nevertheless, the Bianchi model overestimates the suppression in the \pt range 10 < \pt < 18 GeV/$c$, which can only be stated using this work due to its higher statistics in pp collisions.
 
 \begin{appendices}
 \chapter{Appendix}
